test/typeerrors/ex1.golden
Building file ../test/typeerrors/ex1.act
  Compiling ex1.act for release

ERROR: Error when compiling ex1 module: Type error

  |
1 |def f(x,y):
  |        ^
Keyword element 'y' is not found

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

